<?xml version="1.0" encoding="utf-8"?>
<com.google.android.gms.ads.nativead.NativeAdView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admobAppInstallRootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/nativeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#3BFCFDFC"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/viewContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.gms.ads.nativead.AdChoicesView
                        android:id="@+id/choicesContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/squareIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="5dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/ad_image"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/adHeadline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/advertiser_name"
                        android:textColor="@color/black87"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/squareIcon"
                        app:layout_constraintTop_toTopOf="@id/squareIcon"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/advertiser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/advertiser_name"
                        android:textColor="#535353"
                        android:textSize="10sp"
                        app:layout_constraintStart_toEndOf="@id/squareIcon"
                        app:layout_constraintTop_toBottomOf="@id/adHeadline"
                        tools:ignore="SmallSp" />

                    <LinearLayout
                        android:id="@+id/stars"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toEndOf="@id/squareIcon"
                        app:layout_constraintTop_toBottomOf="@id/advertiser">

                        <TextView
                            android:id="@+id/tvAd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="4dp"
                            android:background="@drawable/bg_ad_broder"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:text="Ad"
                            android:textColor="@color/green"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <RatingBar
                            android:id="@+id/adStars"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:isIndicator="true"
                            android:numStars="5"
                            android:stepSize=".5" />

                    </LinearLayout>


                    <TextView
                        android:id="@+id/adBody"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/advertiser_name"
                        android:textColor="#2c2c2c"
                        android:textSize="12sp"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/stars"
                        tools:ignore="SmallSp" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mediaLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
            app:layout_constraintTop_toBottomOf="@+id/nativeView">

            <com.google.android.gms.ads.nativead.MediaView
                android:id="@+id/adMedia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:minHeight="122dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mediaLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/adEtc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/exit"
                android:textColor="@color/black54"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/adAction"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/adPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingLeft="5dp"
                    android:paddingEnd="5dp"
                    android:paddingRight="5dp"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/adStore"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent=".5" />

                <TextView
                    android:id="@+id/adStore"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingLeft="5dp"
                    android:paddingEnd="5dp"
                    android:paddingRight="5dp"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/adPrice"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent=".5" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/adAction"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_calltoaction"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/adEtc" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.gms.ads.nativead.NativeAdView>